Update after integration tests.